# Chonky-Launcher

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  chonkylauncher.cpp  chonkylauncher.h  main.cpp
.github/workflows/: build.yml
